ingress/ingress-tls.yaml
# Kubernetes Ingress example with TLS support
# - Ingress work at HTTP level (layer 7) and routes the HTTP traffic on single IP to one or more services.
# - We need to deploy an ingress controller on kubernetes cluster in order to accept and route the requests.
# - The TLS connection can be between client and the ingress controller.
# - Communication between ingress controller and your web server can be plain HTTP as it is internal.
# CLI to deploy Ingress NGINX controller
#   kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
#   kubectl wait --namespace ingress-nginx --for=condition=ready pod --selector=app.kubernetes.io/component=controller --timeout=90s
#   kubectl get po --all-namespaces
# CLI to create TLS certificate:
#   openssl req -x509 -sha256 -nodes -days 365 -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=nginxsvc/O=nginxsvc"
# CLI to create ingress with TLS:
#   kubectl create secret tls tls-secret --key tls.key --cert tls.crt
#   kubectl apply -f ingress-tls.yaml
#   curl https://localhost
apiVersion: v1
kind: Service
metadata:
  name: myingresssvc
spec:
  selector:
    app: mydep
  ports:
  - port: 8080      # exposes the K8s service on this port within the cluster
    targetPort: 80  # target port to send the traffic within the container

---

# Kubernetes Deployment associated with the Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mydep
  template:
    metadata:
      labels:
        app: mydep
    spec:
      containers:
        - image: nginx:latest
          name: main
          ports:
            - containerPort: 80
              protocol: TCP

---

# Kubernetes Ingress with TLS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingresstls
spec:
  tls:
  - hosts:
    - localhost
    secretName: tls-secret
  rules:
  #- host: mydomain.com # configure your DNS or /etc/hosts with the IP allocated for Ingress
  - host: localhost
    http:
      paths:
        - path: "/test"
          pathType: Prefix
          backend:
            service:
              name: myingresssvc
              port:
                number: 80
